# Bioinf2

./: .gitignore  AlignmentScores.ipynb  MarkovChain.ipynb  MarkovChain.py  Untitled.ipynb  align.py  getScores.py  job.pbs  markovify.ipynb  pyproject.toml  submit_jobs.sh
alignment_results/: ont.csv  pb.csv  reference.csv
